Refactor: Rename app.py to IGCServer.py and update tests
